Closed
Bug 128930
Opened 24 years ago
Closed 23 years ago
border-collapse: border paint -invalidate problem
Categories
(Core :: Layout: Tables, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla1.3beta
People
(Reporter: ewv, Assigned: karnaze)
References
()
Details
Attachments
(2 files, 1 obsolete file)
|
29.35 KB,
image/png
|
Details | |
|
1.56 KB,
patch
|
bernd_mozilla
:
review+
|
Details | Diff | Splinter Review |
| Reporter | ||
Comment 1•24 years ago
|
||
Using a linux build from 03-04-2002, viewing attachment 41276 [details] from bug 24113, a
number of the horizontal rules stretch the entire window width. Forcing
repaints by dragging another window over or scrolling off and back on causes
these lines to randomly disappear and reappear on rules that were fine before.
| Reporter | ||
Comment 2•24 years ago
|
||
Make that attachment 41726 [details]
| Reporter | ||
Comment 3•24 years ago
|
||
I don't see this with 0.9.9. Does anyone else?
Comment 5•24 years ago
|
||
i am seeing this also, 2002041321/Linux ...
but it seems that this bug is a bit inconsistent ... when i scroll the page back
and forth, sometimes there is a problem but sometimes there is not ...
I believe this is distinctly related to the border-collapse series of bugs. An
example page is at http://blue-labs.org/mozbugs/table-lines.php, in order to
reproduce the page width lines, a minimum of three things are required to
reproduce this fairly reliably for me, and those are:
TABLE { border-collapse: collapse; }
TD { border: 12px solid black; }
TD.yes { border: 12px solid blue;}
A table with border-collapse, and two different border colors. With the above,
(read text on page), I can fairly reliably repeat the occurance. If I remove
any particular of the three, I can't repeat it.
Visit the blue-labs.org main page, view either of the sendmail pages the
bluelist page, or the financial shames page. All have tables that fairly
reliably repeat the occurance.
Summary: Horizontal rules stretch entire window width. → Horizontal rules stretch entire window width. [border-collapse and multi color borders related]
Note in http://bugzilla.mozilla.org/showattachment.cgi?attach_id=41726, there
are three example tables that produce the horizontal lines, Rules="cols"
Frame="hsides" or "border". And Frame="box", Rules="all".
Summary: Horizontal rules stretch entire window width. [border-collapse and multi color borders related] → border-collapse: border paint -invalidate problem
Comment 8•24 years ago
|
||
Confirmed! I see the problem on Linux 7.1 only but not with WIN2K. Adding
testcase keyword.
Keywords: testcase
Priority: -- → P3
Updated•23 years ago
|
Target Milestone: --- → Future
Comment 9•23 years ago
|
||
I'm seeing what appears to be the same bug in Mozilla 2002110208 under Windows 98.
http://www.moo.ca/789.%3A!
But I don't see the bug in the testcases presented so far for this bug.
Comment 10•23 years ago
|
||
Removing the testcase keyword. Hoping to attach one soon.
Keywords: testcase
Comment 11•23 years ago
|
||
*** Bug 163883 has been marked as a duplicate of this bug. ***
Comment 12•23 years ago
|
||
Any interest in fixing this bug yet? It's a longstanding and rather glaring bug
for anyone who collapses borders on their tables.
The blue-labs.org URL in comment #6 shows it perfectly 100% of the time now.
Comment 13•23 years ago
|
||
>Any interest in fixing this bug yet?
Do you volunteer????
Can I reasign the bug to you?
If not, can you please take the time to query for the number of bugs in layout
tables before posting such a question. Or even better buy a C++ book and help.
Comment 14•23 years ago
|
||
What I observe is that this only occurs when you scroll slowly (i.e., using the
arrows in the scroll bar, or by dragging the elevator in the scroll bar). If you
scroll by jumping half a page (pressing PgUp/PgDn, or the grey areas in the
scroll bars), the bug does not occur.
Comment 15•23 years ago
|
||
*** Bug 182868 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
I placed at
http://lxr.mozilla.org/seamonkey/source/layout/html/style/src/nsCSSRendering.cpp#4003
to assertion verifying that rect.x and rect.width are below 4000. If you scroll
down the url then you will hit the assertion the values for rect.x look like
unitialized variables
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Target Milestone: Future → mozilla1.3beta
| Assignee | ||
Comment 17•23 years ago
|
||
The patch fixes Bernd's assertion which is likely causing the problem, but I
can't see the problem without the patch, so I'm not sure if it fixes the bug.
| Assignee | ||
Updated•23 years ago
|
Attachment #108295 -
Flags: superreview?(bzbarsky)
Attachment #108295 -
Flags: review?(bernd.mielke)
Comment 18•23 years ago
|
||
the patch fixes the assertions and those stray lines are gone. I think the null
for row is contradicts the assignment to row above and cell is nulled twice. I
will r' it if you could explain me the row thing.
Updated•23 years ago
|
Attachment #108295 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Updated•23 years ago
|
Attachment #108295 -
Flags: review?(bernd.mielke)
| Assignee | ||
Comment 19•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #108295 -
Attachment is obsolete: true
| Assignee | ||
Updated•23 years ago
|
Attachment #108380 -
Flags: review?(bernd.mielke)
Attachment #108380 -
Flags: review?(bernd.mielke) → review+
Comment 20•23 years ago
|
||
Hopefully people who expressed so much love in this bug ( see comment 12) will
finally help and test it once it is in.
Comment 21•23 years ago
|
||
Another site that shows the problem rather consistently is
http://plone.org/collector (which also affects my intranet, based on plone).
I'm using 1.2.1.
Is the patch in comment 17 in the nightlies/1.3 alpha?
Comment 22•23 years ago
|
||
Ok, I just downloaded the latest nighly for windows (2002122308) and I still see
the problem.
| Assignee | ||
Comment 23•23 years ago
|
||
Yes, because the patch hasn't been checked in yet.
Comment 24•23 years ago
|
||
*** Bug 149303 has been marked as a duplicate of this bug. ***
Comment 25•23 years ago
|
||
Polite reminder, I'll be very happy and quick to test this once the patch is
checked in ;)
Comment 26•23 years ago
|
||
*** Bug 187888 has been marked as a duplicate of this bug. ***
Comment 27•23 years ago
|
||
fix checked in, thank you Chris for the permission to do that. I know thats in
principal bad style and dont want to see that to happen with my patches that are
under danger to bitrot.
Comment 28•23 years ago
|
||
Just checked with the latest nighly for windows (2003010708) and the problem
seems to be solved.
I checked with the url in bug 149303 (since it always displays the problem while
other examples do it only from time to time) as well as with my intranet and the
plone.org site.
Thanks.
Comment 29•23 years ago
|
||
seems to be fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 30•23 years ago
|
||
*** Bug 197222 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•