fix border draw glitchin border collapse mode caused by an uninitialized variable bug 128930, patch karnaze@netscape.com r=bernd sr=bzbarsky